2004-07-22  ------ omnetpp-3.0a6 released ------

2004-06-07  ------ omnetpp-3.0a5 released ------

2004-05-15  ------ omnetpp-3.0a4 released ------

Remaining issue: gate directions not observed in Conn Props dialog.
when submodule has random placement, strange thing happens after OK'ing Props dialog
GNED not compatible with new Tkenv mode of using "i=" and "b=" together
new Tkenv display string tags not supported yet
internally, images must be named with "img:" prefix (otherwise exit.gif, 
proc.gif etc will overwrite the exit, proc Tcl commands!)

2004-03-23  Andras Varga
	
	* menuproc.tcl: bugfix: in the treeview, right click + Save always
	saved the file of the currently open canvas, not the right-clicked one.
	[reported by V.T.Nguyen]

2004-03-22  ------ omnetpp-3.0a3 released ------

2004-03-03  ------ omnetpp-3.0a2 released ------

2004-02-22  Andras Varga

	* ebnf.lex,ebnf.y,makened.tcl,datadict.tcl: support for new "gate++"
	NED construct (temporary, until gned gets ported to nedxml)

2004-02-11  Andras Varga

	* fixed bug that caused Tk error when a display string contains
	a paremeter reference, e.g. "o=$color"

	* implemented File|Export EPS... function

2004-02-04  ------ omnetpp-3.0pre1 released ------

2004-02-03  Andras Varga

	* nedfile.cc fixes

2003-11-29  Andras Varga

	* widgets.tcl: added BLT support

	* gned.cc, tklib.cc, tkcmd.cc reorganized

2003-11-24  Andras Varga

	* added Back and Forward toolbar icons; added "New component" toolbar
	icon; improved icon selection dialog; etc.

2003-10-24  Andras Varga

	* usability improvements (tooltips wording change, some icons 
	redesigned, opens Properties dialog when creating new simple module, 
	import, network, etc.)

2003-09-08  Andras Varga

	* bugfix: textedits were not saved until you switched back to graphics
	mode

2003-09-04  Andras Varga

	* implemented "Consult module declaration" button

2003-09-02  Andras Varga

	* canvas.tcl, main.tcl: GUI layout rearranged a bit for usability 