@@ -226,6 +226,10 @@ int yywrap(void)
 #ifdef __cplusplus
 #define input  yyinput
 #endif
+
+/* the following #define is needed for broken flex versions */
+#define yytext_ptr yytext
+
 void comment(void)
 {
         int c;
@@ -285,8 +289,7 @@ void count(void)
 void jar_yyrestart(FILE *_yyin)
 {
 #ifdef FLEX_SCANNER
-        if (yy_current_buffer)
-              yyrestart( _yyin );
+        yyrestart( _yyin );
 #endif
 }
 
