@@ -1,3 +1,8 @@
+2004-07-27  Andras Varga
+
+	* ned.lex: fixed "`yytext_ptr' undeclared" error with some flex 
+	versions
+
 2004-07-22  ------ omnetpp-3.0a6 released ------
 
 2004-07-20  Andras Varga
